# initd

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  profile.md
analysis/: README.md  meson-analyze-all.sh  meson-cppcheck.sh  meson-flawfinder.sh  meson-sanitizers.sh  meson-scan-build.sh  meson-shellcheck.sh  meson-valgrind.sh  meson.build
analysis/fuzz/: calendar_fuzz.c  control_fuzz.c  environment_fuzz.c  exec_argv_fuzz.c  ipc_fuzz.c  list_recv_fuzz.c  parser_fuzz.c  path_security_fuzz.c  priv_ipc_fuzz.c  run-all-fuzzers.sh  socket_ipc_fuzz.c  timer_ipc_fuzz.c
docs/: meson.build
docs/man/man1/: initctl.1  journalctl.1
docs/man/man5/: initd.unit.5
docs/man/man8/: ifdown.8  ifup.8  init.8  initd-supervisor-worker.8  initd-supervisor.8  socket-activator.8  supervisor-master.8  supervisor-slave.8  timer-daemon.8
scripts/: halt  ifdown  ifup  initd-user-manager  initd-user-session  journalctl  meson.build  poweroff  reboot  shutdown
scripts/network-services/: bridge  dhclient  dhcpcd  iwd  pppoe  static  wpa_supplicant
scripts/service-scripts/: checkfs  console  createfiles  localnet  modules-load  mountvirtfs  netfs  network-configure  network-wait-online  udev-retry  udev-trigger
src/common/: control.c  control.h  ipc.c  ipc.h  log-enhanced.c  log-enhanced.h  log.c  log.h  meson.build  parser.c  parser.h  path-security.c  path-security.h  platform-config.h.in  platform.h  privileged-ops.c  privileged-ops.h  scanner.c  scanner.h  socket-ipc.c  socket-ipc.h  timer-ipc.c  timer-ipc.h  unit.h
src/init/: init.c  init.c.bak  meson.build
src/initctl/: initctl.c  meson.build
src/socket-activator/: initd-socket-worker.c  initd-socket.c  meson.build  socket-activator.c
src/supervisor/: initd-supervisor-worker.c  initd-supervisor.c  meson.build  process-tracking.c  process-tracking.h  service-registry.c  service-registry.c.bak  service-registry.h  supervisor-master.c  supervisor-slave.c
src/timer-daemon/: calendar.c  calendar.h  initd-timer-worker.c  initd-timer.c  meson.build  timer-daemon.c
sysconfig/: git-daemon  meson.build  nfs-utils  samba  sendmail  svnserve
sysconfig/optional/: autofs  bluetooth  firewalld  saslauthd  slapd  smartmontools  xdm
sysconfig/reference/: createfiles.conf  modules.conf
tests/: README.md  meson.build  test-calendar.c  test-chroot.c  test-conditions.c  test-control.c  test-dependency.c  test-exec-lifecycle.c  test-initctl-routing.c  test-integration.c  test-ipc.c  test-isolate.c  test-linux-conditions.c  test-log.c  test-offline-enable.c  test-parser.c  test-private-devices.c  test-privileged-ops.c  test-scanner.c  test-service-features.c  test-service-registry.c  test-socket-ipc.c  test-socket-worker.c  test-socket.c  test-state.c  test-supervisor-socket.c  test-supervisor-worker-dag.c  test-timer-ipc.c  test-timer-notify.c  test-user-persistence.c
tests/units/: backup.service  backup.timer  docker.socket  echo.socket  test.service
units/: basic.target  createfiles.service  default.target  echo.service  emergency.target  graphical.target  local-fs.target  meson.build  modules-load.service  mountfs.service  mountvirtfs.service  multi-user.target  netfs.service  network-online.target  network-pre.target  network.target  network@.service  nfs-server.target  nss-lookup.target  remote-fs.target  remount-root.service  rescue.target  rpcbind.target  rsyslog.service  shutdown.target  sysctl.service  sysinit.target  syslog-ng.service  time-sync.target  udevd.service  umount.target
units/optional/: accounts-daemon.service  acpid.service  alsa.service  atd.service  autofs.service  avahi-daemon.service  avahi-dnsconfd.service  bluetooth.service  cups.service  dbus.service  dhcpcdat.service  dovecot.service  exim.service  fcron.service  firewalld.service  git-daemon.service  gpm.service  haveged.service  httpd.service  iptables.service  kea-ctrl-agent.service  kea-ddns-server.service  kea-dhcp4-server.service  kea-dhcp6-server.service  krb5-kadmind.service  krb5-kdc.service  krb5-kpropd.service  lightdm.service  mariadb.service  meson.build  named.service  networkmanager.service  nfs-server.service  nfsd.service  nftables.service  nmbd.service  ntpd.service  php-fpm.service  postfix.service  postgresql.service  (+31 more)
units/reference/: checkfs.service  console.service  createfiles.service  emergency.service  getty@.service  initd-socket.service  initd-timer.service  initd-user-manager.service  initd-user-session.service  klogd.service  localnet.service  modules-load.service  mountfs.service  mountvirtfs.service  netfs.service  network-wait-online.service  network@.service  random-seed.service  rescue.service  swap.service  sysctl.service  syslogd.service  udev-retry.service  udev-settle.service  udev-trigger.service  udevd.service
units/sysconfig/: console.conf  network-eth0.conf.example  udev_retry.conf
