option('dynamic-init', type: 'boolean', value: false,
  description: 'Build init dynamically linked (default: static)')

option('supervisor-user', type: 'string', value: 'initd-supervisor',
  description: 'Unprivileged user for supervisor worker')

option('timer-user', type: 'string', value: 'initd-timer',
  description: 'Unprivileged user for timer worker')

option('socket-user', type: 'string', value: 'initd-socket',
  description: 'Unprivileged user for socket worker')
