# Optional network script install targets were previously provided
# but are intentionally omitted here; helper scripts are installed
# via the install-reference run target in units/meson.build.

install_data(
  meson.current_source_dir() / 'journalctl',
  install_dir: get_option('bindir'),
  install_mode: 'rwxr-xr-x'
)
